// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Matches snapshot 1`] = `
<div>
  <button
    class="sc-bdvvtL gAgHBR btn btn-primary"
    type="button"
  />
</div>
`;

exports[`ButtonClear Matches snapshot 1`] = `
<div>
  <button
    class="sc-bdvvtL sc-dkPtRN gAgHBR FSLNo btn btn-primary"
    type="button"
  />
</div>
`;

exports[`ButtonsWhite Matches snapshot 1`] = `
<div>
  <button
    class="sc-bdvvtL sc-gsDKAQ gAgHBR fuXhKv btn btn-primary"
    type="button"
  />
</div>
`;
